Revert "List: newer Java API/syntax"
This reverts commit dcffbc25330b5e32aa6dced8b5185a2f02542c4e.