@@ -104,7 +104,7 @@ public class List extends NativeBasedCustomScrollable {
 			return;
 		}
 
-		Drawing.drawWithGC(this, event.gc, renderer::paint);
+		Drawing.drawWithGC(this, event.gc, gc -> renderer.paint(gc));
 	}
 
 	private void onKeyReleased(Event event) {
@@ -138,7 +138,7 @@ public class List extends NativeBasedCustomScrollable {
 
 	private void moveSelection(int offset) {
 		if (this.selectedItems.size() == 1) {
-			int currentIndex = selectedItems.getFirst();
+			int currentIndex = selectedItems.iterator().next();
 			selectedItems.clear();
 			selectedItems.add(calculateNewIndex(currentIndex, offset));
 		}
@@ -347,7 +347,7 @@ public class List extends NativeBasedCustomScrollable {
 		if (this.selectedItems.isEmpty()) {
 			return -1;
 		}
-		return this.selectedItems.getFirst();
+		return this.selectedItems.get(0);
 	}
 
 	public String getItem(int index) {
@@ -370,7 +370,7 @@ public class List extends NativeBasedCustomScrollable {
 
 	public int getItemHeightInPixels() {
 		checkWidget();
-		String referenceText = this.items.isEmpty() ? DUMMY_ITEM_TEXT : this.items.getFirst();
+		String referenceText = this.items.isEmpty() ? DUMMY_ITEM_TEXT : this.items.get(0);
 		GC gc = new GC(this);
 		gc.setFont(getFont());
 		int itemHeight = gc.textExtent(referenceText).y;
@@ -710,7 +710,7 @@ public class List extends NativeBasedCustomScrollable {
 			return;
 		}
 
-		int selectedIndex = this.selectedItems.getFirst();
+		int selectedIndex = this.selectedItems.get(0);
 
 		if (selectedIndex < 0 || selectedIndex >= this.items.size()) {
 			return;
